# rust-defi-liquidity-aggregator

./: Cargo.toml  README.md
docs/: architecture.mmd
examples/: basic_swap.rs
src/: lib.rs  main.rs  types.rs
src/dex/: curve.rs  mod.rs  sushiswap.rs  uniswap.rs
src/gas/: mod.rs
src/pathfinding/: mod.rs
src/simulation/: mod.rs
